[tool.poetry]
name = "Singularity-Onboarding"
version = "0.1.0"
description = "A suite of python scripts for singularity"
authors = ["SethDocherty <sddocherty@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
ipywidgets = "^8.1.3"
ipykernel = "^6.29.5"
ipyaggrid = "^0.5.4"
seaborn = "^0.13.2"
ipympl = "^0.9.4"
tzlocal = "^5.2"
jupyterlab = "^4.2.4"
nbconvert = "^7.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
