[tool.poetry]
name = "Singularity-Onboarding"
version = "0.1.0"
description = "A suite of python scripts for singularity"
authors = ["SethDocherty <sddocherty@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.2"
ipywidgets = "^8.1.3"
notebook = "^7.2.1"
ipykernel = "^6.29.5"
ipyaggrid = "^0.5.4"
seaborn = "^0.13.2"
ipympl = "^0.9.4"
tzlocal = "^5.2"
jupyter-repo2docker = "^2024.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
